<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="female">Female</string>
    <string name="todo">TODO</string>
    <string name="age">Age</string>
    <string name="cm">Cm</string>
    <string name="_67kg_you_are_a_healthy_weight">67kg - You are a healthy weight</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight</string>
    <string name="meters">Meters</string>
</resources>