<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="246dp"
        android:layout_height="111dp"
        app:srcCompat="@drawable/wmremove_transformed_removebg_preview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bmi_calculator" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />


    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/age"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="TextFields" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/cm"
            android:inputType="number"
            android:textColorHint="#546E7A"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/meters"
            android:inputType="number"
            android:textColorHint="#546E7A"
            tools:ignore="TextFields,TouchTargetSizeCheck" />


    </LinearLayout>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="number"
        android:hint="@string/weight"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="TextFields" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/calculate" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/_67kg_you_are_a_healthy_weight" />


</LinearLayout>
